# eigen

./: .ROADMAP.md.swp  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  agent_sessions.go  agent_sessions_test.go  agents.go  agents_test.go  attach_sock_test.go  build.go  daemon.go  deathsig_linux.go  deathsig_other.go  default_model_test.go  go.mod  go.sum  gui.go  gui_stub.go  guiserver.go  guiserver_race_test.go  imagegen_run.go  local_test.go  main.go  main_cli_smoke_test.go  main_gui_wails.go  memory_loop_test.go  plugincmd.go  pty_smoke_test.go  remote.go  remote_session.go  retrieve_run.go  retrieve_run_test.go  root_resource_settle_test.go  router.go  router_test.go  (+11 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  gui-phase.yml
docs/: automation-example.md  design-inventory.md  design-references.md  design-system.md  gui-accessibility-keyboard-audit.md  gui-current-surface-acceptance.md  gui-delivery-notes.md  gui-desktop.md  gui-feature-parity.md  gui-final-acceptance-checklist.md  gui-final-review-resolution.md  gui-mutating-pages-evidence.md  gui-next-phase-backlog.md  gui-parity-evidence.md  gui-phase-gate.md  gui-phase-summary.json  gui-screenshot-artifacts.md  gui_accessibility_keyboard_audit_test.go  gui_ci_workflow_test.go  gui_current_surface_acceptance_test.go  gui_delivery_notes_test.go  gui_evidence_references_test.go  gui_feature_parity_test.go  gui_final_acceptance_checklist_test.go  gui_final_review_resolution_test.go  gui_mutating_pages_evidence_test.go  gui_next_phase_backlog_test.go  gui_parity_evidence_test.go  gui_phase_gate_test.go  gui_phase_summary_test.go  gui_real_wails_artifacts_test.go  gui_screenshot_artifacts_test.go  gui_visual_artifacts_test.go  hooks-example.json  memory-system.md  performance.md  plugins.md  qt-migration-plan.md  research-codex-memory.md  research-compaction.md
docs/issues/: ledger.json  ledger.md  stability-pass.md
docs/map/: README.md  _dead-code.md  agent.md  app-superapp.md  chat-session-observe.md  daemon.md  docs.md  gui-bridge.md  gui-components.md  gui-lib-stores.md  gui-views-a.md  gui-views-b.md  infra-misc.md  lsp.md  (+14 more)
gui-qt/: LIVE_VIEW_IMPLEMENTATION.md  MARKDOWN_TEST_INSTRUCTIONS.md  MODELS_PACKAGE_DELIVERY.md  PHASE-A-VERIFIED.md  PHASE-B-CHAT-PARITY.md  PHASE_B_SUMMARY.md  QA-REPORT-old.md  QA-REPORT-round2.md.bak  QA-REPORT.md  README.md  RPC_PACKAGE_DELIVERY.md  STATUS_STDERR.txt  SWITCHOVER-SET-VERIFIED.md  VERIFICATION-REPORT.md  capture_dashboard.py  conftest.py  debug_sessions.py  install-desktop.sh  install-desktop.shk  main.py  mock_guiserver.py  proof.py  requirements.txt  run.sh  screenshot_tasks.py  take_live_screenshot.sh  test_board.py  test_board_screenshot.py  test_board_simple.sh  test_chat_parity.py  test_client_mock.py  test_clipboard_image.py  test_config_reviewers.py  test_config_reviewers_views.py  test_config_view.py  test_connectors.py  test_connectors_model.py  test_e2e.py  test_home_qml.py  test_just_rail.py  (+18 more)
internal/harness/embedded/agent-workspace-linux/: Cargo.toml
internal/harness/embedded/agent-workspace-linux/src/: agent.rs  approval.rs  browser.rs  control.rs  guardrails.rs  main.rs  permissions.rs  policy.rs  profile.rs  server.rs  viewer.rs  workspace.rs
scripts/: gui-smoke.sh  verify-gui-phase.sh
(+825 files in other folders)
